--- a/Adidas Home Page/css/styles.css
+++ b/Adidas Home Page/css/styles.css
@@ -330,10 +330,6 @@
 
         .hero-section {
             position: relative;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
             background-color: transparent;
         }
 
@@ -369,9 +365,6 @@
             position: relative;
             z-index: 2;
             margin-top: 10px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
             width: 100%;
             max-width: 1060px;
             padding: 60px 40px;
