--- a/Adidas Home Page/css/tablet-styles.css
+++ b/Adidas Home Page/css/tablet-styles.css
@@ -41,10 +41,6 @@
             .title-content .right {
                 margin-right: 62px;
             }
-            .hero-section {
-                height:449px;
-                overflow:hidden;
-            }
 
 
             .hero-arrow {
